<resources>
    <string name="app_name">GrocerEase</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bottom_navigation">Bottom Navigation</string>
    <string name="totalExpenses">Total Recent Expenses</string>
    <string name="totalItems">Total Item Bought Recently</string>
    <string name="recent">Recently Added</string>
    <string name="content_image">Image View</string>
    <string name="fab_description">Floating Action Button Add.</string>
    <string name="total_items">Total Items</string>
    <string name="item_prices">Rp100.000,00</string>
    <string name="item_total">100 Items</string>
    <string name="item_date">18 November 2024</string>
    <string name="fragment_home">Fragment Home</string>
    <string name="fragment_expenses">Fragment Expenses</string>
    <string name="fragment_plan">Fragment Plan</string>
    <string name="fragment_profile">Fragment Profile</string>


    <!-- Data dummy -->
    <!-- String array for item_price -->
    <string-array name="item_prices">
        <item>100000</item>
        <item>250000</item>
        <item>75000</item>
        <item>150000</item>
        <item>300000</item>
        <item>50000</item>
        <item>200000</item>
        <item>90000</item>
        <item>500000</item>
        <item>120000</item>
    </string-array>

    <!-- String array for item_total -->
    <string-array name="item_totals">
        <item>90</item>
        <item>30</item>
        <item>120</item>
        <item>45</item>
        <item>75</item>
        <item>60</item>
        <item>35</item>
        <item>50</item>
        <item>80</item>
        <item>25</item>
    </string-array>

    <!-- String array for item_date -->
    <string-array name="item_dates">
        <item>18 November 2024</item>
        <item>17 November 2024</item>
        <item>16 November 2024</item>
        <item>15 November 2024</item>
        <item>14 November 2024</item>
        <item>13 November 2024</item>
        <item>12 November 2024</item>
        <item>11 November 2024</item>
        <item>10 November 2024</item>
        <item>9 November 2024</item>
    </string-array>

    <!-- String array for item_image -->
    <string-array name="item_images">
        <item>@drawable/placeholder</item>
        <item>@drawable/placeholder</item>
        <item>@drawable/placeholder</item>
        <item>@drawable/placeholder</item>
        <item>@drawable/placeholder</item>
        <item>@drawable/placeholder</item>
        <item>@drawable/placeholder</item>
        <item>@drawable/placeholder</item>
        <item>@drawable/placeholder</item>
        <item>@drawable/placeholder</item>
    </string-array>
</resources>